// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PowerStatus error 1`] = `
<span
  class="fa fa-power-off host-power-status na"
  title="undefined undefined"
>
  
</span>
`;

exports[`PowerStatus resolvedWithOff 1`] = `
<span
  class="fa fa-power-off host-power-status off"
  title="Off"
>
  
</span>
`;

exports[`PowerStatus resolvedWithOn 1`] = `
<span
  class="fa fa-power-off host-power-status on"
  title="On"
>
  
</span>
`;
